--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="https://www.linkedin.com/in/andrewswu" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        Find me at: <a href="https://www.linkedin.com/in/andrewswu" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
       <!-- <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i> -->
@@ -118,27 +118,37 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
+              <!-- <video width="420" height="280" controls>
+                <source src="assets/img/portfolio/Unreal 5 - TankBlast Game.mp4" type="video/mp4">
+              </video> -->
               <iframe width="420" height="315" src="https://www.youtube.com/embed/BzVzw6Ww7aM">
               </iframe>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/gallery/gallery-2.jpg" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-2.jpg" title="Gallery 2" class="glightbox preview-link">
+              <!-- <div class="gallery-links d-flex align-items-center justify-content-center"> -->
+                <a href="simple-shooter.html" class="details-link">Simple Shooter<i class="bi bi-link-45deg"></i></a>
+                <iframe width="420" height="315" src="https://www.youtube.com/embed/oxQXLYPROFk">
+                </iframe>
+
+                <!-- <video width="420" height="280" controls>
+                  <source src="assets/img/portfolio/Unreal 5 Shooter Game.mp4" type="video/mp4">
+                </video> -->
+                <!--<img src="assets/img/gallery/gallery-2.jpg" class="img-fluid" alt="">
+                  <a href="assets/img/gallery/gallery-2.jpg" title="Gallery 2" class="glightbox preview-link">
                   <i class="bi bi-arrows-angle-expand"></i></a>
-                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
+                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+              <!-- </div> -->
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/gallery/gallery-3.jpg" class="img-fluid" alt="">
+              <!-- <img src="assets/img/gallery/gallery-3.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-3.jpg" title="Gallery 3" class="glightbox preview-link"><i
                     class="bi bi-arrows-angle-expand"></i></a>
-                <!-- <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -153,16 +163,10 @@
             <h2>About</h2>
             <p>Working with technology for a decade, with large experience developing applications with different levels
               of complexity from landing pages to finance systems, I get a solid understanding of how to translate the
-              business needs to a technical solution.
-              Developing MVP's to highly scalable products, using the best tools and technologies that better fit the
-              problem.</p>
+              business needs to a technical solution, developing MVP's to highly scalable products.</p>
+            <p>Currently diving into Unreal Engine making side projects and learning game development in C++</p>
           </div>
-
-
         </div>
-
-
-
       </div>
     </section>
 
