--- a/index.html
+++ b/index.html
@@ -128,10 +128,9 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
               <!-- <div class="gallery-links d-flex align-items-center justify-content-center"> -->
-                <a href="simple-shooter.html" class="details-link">Simple Shooter<i class="bi bi-link-45deg"></i></a>
                 <iframe width="420" height="315" src="https://www.youtube.com/embed/oxQXLYPROFk">
                 </iframe>
-
+                <a href="simple-shooter.html" class="details-link">Simple Shooter Details<i class="bi bi-link-45deg"></i></a>
                 <!-- <video width="420" height="280" controls>
                   <source src="assets/img/portfolio/Unreal 5 Shooter Game.mp4" type="video/mp4">
                 </video> -->
