chore: changing objective subtitle

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
           <h2>I'm <span>Andrews Wu</span> a Software Developer</h2>
-          <p style="text-decoration: underline;"><b>Looking to pivot my career into <span>Game Development</span></b>
+          <p style="text-decoration: underline;"><b>Looking to work with <span>Game Development</span> and/or Game Backend</b>
           </p>
           <!-- <a href="contact.html" class="btn-get-started">Available for hire</a> -->
         </div>
