chore: change index to backend portfolio

--- a/game-dev-index.html
+++ b/game-dev-index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>Backend Software Portfolio Andrews Wu</title>
+	<title>Game Portfolio Andrews Wu</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 
@@ -45,11 +45,11 @@
 	<header id="header" class="header d-flex align-items-center fixed-top">
 		<div class="container-fluid d-flex align-items-center justify-content-between">
 
-			<a href="backend.html" class="logo d-flex align-items-center  me-auto me-lg-0">
+			<a href="game-dev-index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
 				<!-- Uncomment the line below if you also wish to use an image logo -->
 				<!-- <img src="assets/img/logo.png" alt=""> -->
-				<i class="bi bi-code"></i>
-				<h1>Backend Portfolio</h1>
+				<i class="bi bi-controller"></i>
+				<h1>Game Portfolio</h1>
 			</a>
 
 			<!-- <nav id="navbar" class="navbar">
@@ -83,7 +83,7 @@
 
 			<div class="header-social-links">
 				Find me at: <a href="https://www.linkedin.com/in/andrewswu" target="_blank" class="linkedin"><i
-						class="bi bi-linkedin"></i></a>
+						class="bi bi-linkedin"></i></i></a>
 			</div>
 			<!-- <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i> -->
@@ -98,8 +98,9 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-6 text-center">
 					<h2>I'm <span>Andrews Wu</span> a Software Developer</h2>
-					<!-- <p style="text-decoration: underline;"><b>Looking to work with <span>Game Development</span> and/or Game Backend</b>
-          </p> -->
+					<p style="text-decoration: underline;"><b>Looking to work with <span>Game Development</span> and/or
+							Game Backend</b>
+					</p>
 					<!-- <a href="contact.html" class="btn-get-started">Available for hire</a> -->
 				</div>
 			</div>
@@ -113,30 +114,43 @@
 			<div class="container-fluid">
 				<div class="row justify-content-center">
 					<div class="col-lg-6 text-center">
-						<h2 style="text-decoration: underline;">Backend Projects</h2>
+						<h2 style="text-decoration: underline;">Game Projects</h2>
 					</div>
 				</div>
 				<div class="row gy-4 justify-content-center">
 					<div class="col-xl-3 col-lg-4 col-md-6">
 						<div class="gallery-item h-100">
-							<a href="go-api.html" class="details-link">Go Api Project Details<i
-									class="bi bi-link-45deg underline"></i></a>
-							<iframe width="420" height="315"
-								src="https://player.vimeo.com/video/1108470413?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-								frameborder="0"
-								allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
-								referrerpolicy="strict-origin-when-cross-origin"
-								title="Quick Presentation of the api"></iframe>
-
-
+							<!-- <video width="420" height="280" controls>
+                <source src="assets/img/portfolio/Unreal 5 - TankBlast Game.mp4" type="video/mp4">
+              </video> -->
+							<iframe width="420" height="315" src="https://www.youtube.com/embed/BzVzw6Ww7aM">
+							</iframe>
 						</div>
 					</div><!-- End Gallery Item -->
 					<div class="col-xl-3 col-lg-4 col-md-6">
 						<div class="gallery-item h-100">
+							<!-- <div class="gallery-links d-flex align-items-center justify-content-center"> -->
+							<iframe width="420" height="315" src="https://www.youtube.com/embed/oxQXLYPROFk">
+							</iframe>
+							<a href="simple-shooter.html" class="details-link">Simple Shooter Details<i
+									class="bi bi-link-45deg"></i></a>
+							<!-- <video width="420" height="280" controls>
+                  <source src="assets/img/portfolio/Unreal 5 Shooter Game.mp4" type="video/mp4">
+                </video> -->
+							<!--<img src="assets/img/gallery/gallery-2.jpg" class="img-fluid" alt="">
+                  <a href="assets/img/gallery/gallery-2.jpg" title="Gallery 2" class="glightbox preview-link">
+                  <i class="bi bi-arrows-angle-expand"></i></a>
+                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+							<!-- </div> -->
 						</div>
 					</div><!-- End Gallery Item -->
 					<div class="col-xl-3 col-lg-4 col-md-6">
 						<div class="gallery-item h-100">
+							<!-- <img src="assets/img/gallery/gallery-3.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/gallery-3.jpg" title="Gallery 3" class="glightbox preview-link"><i
+                    class="bi bi-arrows-angle-expand"></i></a>
+                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
 						</div>
 					</div>
 				</div><!-- End Gallery Item -->
@@ -149,14 +163,12 @@
 				<div class="row gy-4 justify-content-center">
 					<div class="col-lg-6 text-center">
 						<h2>About</h2>
-						<p>Technology professional with over 10 years of experience, working on systems with varying
-							levels of complexity — from landing pages to high-demand solutions in the financial sector.
-							I have a solid ability to translate business needs into efficient and scalable technical
-							solutions.
-
-							Experienced in building MVPs and scalable products using the most suitable tools and
-							technologies for each challenge. With a multipotential profile, I'm constantly improving my
-							skills in communication, strategic thinking and management.
+						<p>Working with technology for a decade, with large experience developing applications with
+							different levels
+							of complexity from landing pages to finance systems, I get a solid understanding of how to
+							translate the
+							business needs to a technical solution, developing MVP's to highly scalable products.</p>
+						<p>Currently diving into Unreal Engine making side projects and learning game development in C++
 						</p>
 					</div>
 				</div>
