--- a/index.html
+++ b/index.html
@@ -1,209 +1,167 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Andrews Portfolio">
+	<meta name="author" content="Andrews">
+	<title>Andrews - Backend Portfolio</title>
+	<link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
+	<!-- Bootstrap core CSS -->
+	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 
-  <title>Game Portfolio Andrews Wu</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap"
-    rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: PhotoFolio
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+	<!-- Custom styles for this template -->
+	<link href="assets/css/portfolio.css" rel="stylesheet">
 </head>
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid d-flex align-items-center justify-content-between">
+	<header>
+		<div class="collapse bg-dark" id="navbarHeader">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-8 col-md-7 py-4">
+						<h4 class="text-white">About</h4>
+						<p class="text-muted">Technology professional with over 13 years of experience, working on
+							systems with varying
+							levels of complexity — from landing pages to high-demand solutions in the financial sector.
+							I have a solid ability to translate business needs into efficient and scalable technical
+							solutions.
 
-      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <i class="bi bi-controller"></i>
-        <h1>Game Portfolio</h1>
-      </a>
+							Experienced in building MVPs and scalable products using the most suitable tools and
+							technologies for each challenge. With a multipotential profile, I'm constantly improving my
+							skills in communication, strategic thinking and management.</p>
+					</div>
+					<div class="col-sm-4 offset-md-1 py-4">
+						<h4 class="text-white">Contact</h4>
+						<ul class="">
+							<li><a href="https://www.linkedin.com/in/andrewswu/?locale=en_US" target="_blank"
+									class="text-white">LinkedIn <i class="bi bi-linkedin"></i></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="navbar navbar-dark bg-dark box-shadow">
+			<div class="container d-flex justify-content-between">
+				<strong>
+					<a style="text-decoration: underline;" class="navbar-brand" href="index.html">
+						<i style="margin-left: 5px; margin-right: 5px;" class="bi bi-code-square"></i>Backend
+						Portfolio</a>
+				</strong>
+				<a href="#" class="navbar-brand d-flex align-items-center">
+					<!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+						stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+						class="mr-2">
+						<path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z">
+						</path>
+						<circle cx="12" cy="13" r="4"></circle>
+					</svg> -->
+					<!-- <strong> <i style="margin-left: 5px; margin-right: 5px;" class="bi bi-code-square"></i>Backend
+						Portfolio</strong> -->
+				</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
+					aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+			</div>
+		</div>
+	</header>
+	<main role="main">
+		<section class="jumbotron text-center">
+			<div class="container">
+				<h1 class="jumbotron-heading">Andrews Wu</h1>
+				<p class="lead">{ Software Developer }</p>
+				<!-- <p>
+					<a href="#" class="btn btn-primary my-2">Main call to action</a>
+					<a href="#" class="btn btn-secondary my-2">Secondary action</a>
+				</p> -->
+			</div>
+		</section>
+		<div class="album py-5 bg-light">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4">
+						<div class="card mb-4 box-shadow">
+							<a href="web-api-go.html" class="card-link-overlay"></a>
+							<!-- width="420" height="315" -->
+							<iframe width="100%" height="255px"
+								src="https://player.vimeo.com/video/1108470413?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+								frameborder="0"
+								allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
+								referrerpolicy="strict-origin-when-cross-origin"
+								title="Quick Presentation of the api"></iframe>
+							<div class="card-body">
+								<p class="card-text">Go web api simple crud utilizing fakestoreapis</p>
+								<div class="d-flex justify-content-between align-items-center">
+									<div class="btn-group">
+										<a href="web-api-go.html" class="details-link z-1">Project Details<i
+												class="bi bi-link-45deg underline"></i></a>
+										<!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button> -->
+										<!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
+									</div>
+									<!-- <small class="text-muted">9 mins</small> -->
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- <div class="col-md-4">
+						<div class="card mb-4 box-shadow">
+							<img class="card-img-top"
+								data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+								alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
+								src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22348%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20348%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_198aa97a760%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A17pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_198aa97a760%22%3E%3Crect%20width%3D%22348%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22116.71875%22%20y%3D%22120.3%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+								data-holder-rendered="true">
+							<div class="card-body">
+								<p class="card-text">This is a wider card with supporting text below as a natural
+									lead-in to additional content. This content is a little bit longer.</p>
+								<div class="d-flex justify-content-between align-items-center">
+									<div class="btn-group">
+										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+										<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+									</div>
+									<small class="text-muted">9 mins</small>
+								</div>
+							</div>
+						</div>
+					</div> -->
+				</div>
+			</div>
+		</div>
 
-      <!-- <nav id="navbar" class="navbar">
-        <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a href="#"><span>Gallery</span> <i
-                class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <ul>
-              <li><a href="gallery.html">Nature</a></li>
-              <li><a href="gallery.html">People</a></li>
-              <li><a href="gallery.html">Architecture</a></li>
-              <li><a href="gallery.html">Animals</a></li>
-              <li><a href="gallery.html">Sports</a></li>
-              <li><a href="gallery.html">Travel</a></li>
-              <li class="dropdown"><a href="#"><span>Sub Menu</span> <i
-                    class="bi bi-chevron-down dropdown-indicator"></i></a>
-                <ul>
-                  <li><a href="#">Sub Menu 1</a></li>
-                  <li><a href="#">Sub Menu 2</a></li>
-                  <li><a href="#">Sub Menu 3</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav> -->
-      <!-- .navbar -->
+	</main>
 
-      <div class="header-social-links">
-        Find me at: <a href="https://www.linkedin.com/in/andrewswu" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-      </div>
-      <!-- <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
-      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i> -->
+	<footer class="text-muted">
+		<div class="container">
+			<p class="float-right">
+				<a href="#">Back to top</a>
+			</p>
+			<p>Thanks for visiting =) reach out on <a href="https://www.linkedin.com/in/andrewswu/?locale=en_US"
+					target="_blank" class="">LinkedIn <i class="bi bi-linkedin"></i></i></a></p>
 
-    </div>
-  </header><!-- End Header -->
+		</div>
+	</footer>
 
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade"
-    data-aos-delay="1500">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-6 text-center">
-          <h2>I'm <span>Andrews Wu</span> a Software Developer</h2>
-          <p style="text-decoration: underline;"><b>Looking to work with <span>Game Development</span> and/or Game Backend</b>
-          </p>
-          <!-- <a href="contact.html" class="btn-get-started">Available for hire</a> -->
-        </div>
-      </div>
-    </div>
-  </section><!-- End Hero Section -->
-  <hr>
-  <main id="main" data-aos="fade" data-aos-delay="1500">
+	<!-- Bootstrap core JavaScript
+    ================================================== -->
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+		crossorigin="anonymous"></script>
+	<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+	<script src="../../assets/js/vendor/popper.min.js"></script>
+	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../../assets/js/vendor/holder.min.js"></script>
 
-    <!-- ======= Gallery Section ======= -->
-    <section id="gallery" class="gallery">
-      <div class="container-fluid">
-        <div class="row justify-content-center">
-          <div class="col-lg-6 text-center">
-            <h2 style="text-decoration: underline;">Game Projects</h2>
-          </div>
-        </div>
-        <div class="row gy-4 justify-content-center">
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <!-- <video width="420" height="280" controls>
-                <source src="assets/img/portfolio/Unreal 5 - TankBlast Game.mp4" type="video/mp4">
-              </video> -->
-              <iframe width="420" height="315" src="https://www.youtube.com/embed/BzVzw6Ww7aM">
-              </iframe>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <!-- <div class="gallery-links d-flex align-items-center justify-content-center"> -->
-                <iframe width="420" height="315" src="https://www.youtube.com/embed/oxQXLYPROFk">
-                </iframe>
-                <a href="simple-shooter.html" class="details-link">Simple Shooter Details<i class="bi bi-link-45deg"></i></a>
-                <!-- <video width="420" height="280" controls>
-                  <source src="assets/img/portfolio/Unreal 5 Shooter Game.mp4" type="video/mp4">
-                </video> -->
-                <!--<img src="assets/img/gallery/gallery-2.jpg" class="img-fluid" alt="">
-                  <a href="assets/img/gallery/gallery-2.jpg" title="Gallery 2" class="glightbox preview-link">
-                  <i class="bi bi-arrows-angle-expand"></i></a>
-                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
-              <!-- </div> -->
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <!-- <img src="assets/img/gallery/gallery-3.jpg" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-3.jpg" title="Gallery 3" class="glightbox preview-link"><i
-                    class="bi bi-arrows-angle-expand"></i></a>
-                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-        </div>
-      </div>
-    </section><!-- End Gallery Section -->
-    <hr>
-    <section>
-      <div class="container-fluid">
-        <div class="row gy-4 justify-content-center">
-          <div class="col-lg-6 text-center">
-            <h2>About</h2>
-            <p>Working with technology for a decade, with large experience developing applications with different levels
-              of complexity from landing pages to finance systems, I get a solid understanding of how to translate the
-              business needs to a technical solution, developing MVP's to highly scalable products.</p>
-            <p>Currently diving into Unreal Engine making side projects and learning game development in C++</p>
-          </div>
-        </div>
-      </div>
-    </section>
 
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>PhotoFolio</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
-
-  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
-
-  <div id="preloader">
-    <div class="line"></div>
-  </div>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
-
+	<svg xmlns="http://www.w3.org/2000/svg" width="348" height="225" viewBox="0 0 348 225" preserveAspectRatio="none"
+		style="display: none; visibility: hidden; position: absolute; top: -100%; left: -100%;">
+		<defs>
+			<style type="text/css"></style>
+		</defs><text x="0" y="17"
+			style="font-weight:bold;font-size:17pt;font-family:Arial, Helvetica, Open Sans, sans-serif">Thumbnail</text>
+	</svg>
 </body>
 
 </html>
